--- a/exercicios/ex 025/fundo005.html
+++ b/exercicios/ex 025/fundo005.html
@@ -7,15 +7,13 @@
     <title>Posicionamento</title>
     <style>
         body{
-            height: 98vh;
-            background-image: url("https://gustavoguanabara.github.io/html-css/imagens/mascote.png");
-            background-size: 100px;
-            background-repeat: no-repeat;
+            background-image: url("imagens/wallpaper003.jpg");
             background-position: center center;
+            height: 97vh;
+            background-repeat: no-repeat;
         }
     </style>
 </head>
-
 <body>
     
 </body>
