Configurando parâmetros do iframe

--- a/exercicios/ex 027/iframe001.html
+++ b/exercicios/ex 027/iframe001.html
@@ -9,11 +9,17 @@
 <body>
     <h1>Testando o uso de um iframe</h1>
     <p>Acessando o site do
-        <iframe src="https://www.cursoemvideo.com">
-
+        <iframe src="https://www.cursoemvideo.com" height="500" scooling="">
+            <a href="https://www.cursoemvideo.com">Cursoemvideo</a>
         </iframe>
         para aprender a programar. </p>
 
-        <p>Siga <iframe src="" frameborder="0"></iframe></p>
+        <p>Acesse o <iframe src="https://marcelovenagui.github.io/html-Css/desafios/d010/" frameborder="0" height="500">
+
+            
+        </iframe>meu site</p>
+
+
+        
 </body>
 </html>
