--- a/exercicios/ex 029/form001.html
+++ b/exercicios/ex 029/form001.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Meu primeiro Formulário</h1>
-    <form autocomplete="off">
+    <form autocomplete="off" method="post">
         <p><label for="inome">Nome:</label> <input type="text" name="nome" id="inome"></p>
         <p><label for="isobrenome">Sobrenome:</label> <input type="text" name="sobrenome" id="isobrenome"></p> 
         <p><input type="submit" value="Enviar"></p>
